--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -302,32 +302,41 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="z1O-SF-512">
-                                <rect key="frame" x="75" y="100" width="77" height="72"/>
+                                <rect key="frame" x="75" y="80" width="77" height="72"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="add_camera.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="cameraButtonTouch:" destination="T5l-FE-I7A" eventType="touchUpInside" id="OUi-Qa-O7X"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="TNP-zi-J2W">
-                                <rect key="frame" x="155" y="100" width="77" height="72"/>
+                                <rect key="frame" x="155" y="80" width="77" height="72"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="add_photo.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="photoButtonTouch:" destination="T5l-FE-I7A" eventType="touchUpInside" id="CR6-Oj-e8f"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="GDy-Rx-Ywf">
-                                <rect key="frame" x="75" y="173" width="77" height="72"/>
+                                <rect key="frame" x="75" y="153" width="77" height="72"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="add_name.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5oG-oD-BUc">
-                                <rect key="frame" x="155" y="173" width="77" height="72"/>
+                                <rect key="frame" x="155" y="153" width="77" height="72"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="add_cancel.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="cancelButtonTouch:" destination="T5l-FE-I7A" eventType="touchUpInside" id="ANA-n9-Mb2"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Rha-XP-TBy">
                                 <rect key="frame" x="75" y="275" width="47" height="17"/>
@@ -337,6 +346,9 @@
                                 </state>
                                 <state key="selected" backgroundImage="add_girl_hl.png"/>
                                 <state key="highlighted" backgroundImage="add_girl_hl.png"/>
+                                <connections>
+                                    <action selector="girlButtonTouch:" destination="T5l-FE-I7A" eventType="touchUpInside" id="KYO-bx-cF1"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="WCe-87-BwA">
                                 <rect key="frame" x="185" y="275" width="47" height="17"/>
@@ -346,6 +358,9 @@
                                 </state>
                                 <state key="selected" backgroundImage="add_boy_hl.png"/>
                                 <state key="highlighted" backgroundImage="add_boy_hl.png"/>
+                                <connections>
+                                    <action selector="boyButtonTouch:" destination="T5l-FE-I7A" eventType="touchUpInside" id="OXX-1Z-pnm"/>
+                                </connections>
                             </button>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" id="xJT-Gf-NJy">
                                 <rect key="frame" x="0.0" y="350" width="320" height="162"/>
@@ -397,10 +412,18 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted" backgroundImage="add_done_hl.png"/>
+                                <connections>
+                                    <action selector="doneButtonTouch:" destination="T5l-FE-I7A" eventType="touchUpInside" id="PxP-fr-jbR"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="birthdayLabel" destination="W1Q-FN-e8i" id="ggb-bq-hgX"/>
+                        <outlet property="boyButton" destination="WCe-87-BwA" id="wWD-Vj-j3Z"/>
+                        <outlet property="girlButton" destination="Rha-XP-TBy" id="sG4-EL-Gii"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lye-Qb-aeF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -614,16 +637,16 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="56" sectionHeaderHeight="22" sectionFooterHeight="22" id="Jg0-9D-zCE" customClass="SKSTableView">
-                                <rect key="frame" x="0.0" y="63" width="154" height="505"/>
+                                <rect key="frame" x="0.0" y="63" width="186" height="505"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="settingCellIdentifier" rowHeight="56" id="6A4-iZ-I8g" customClass="SKSTableViewCell">
-                                        <rect key="frame" x="0.0" y="22" width="154" height="56"/>
+                                        <rect key="frame" x="0.0" y="22" width="186" height="56"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6A4-iZ-I8g" id="PfV-dI-lKk">
-                                            <rect key="frame" x="0.0" y="0.0" width="154" height="55"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="186" height="55"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
