--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -578,6 +578,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                     <connections>
                         <outlet property="oneButton" destination="elq-T2-mHe" id="ZPi-pU-I26"/>
                         <outlet property="panelImage" destination="oBi-yW-MnG" id="h9L-r6-IMl"/>
+                        <outlet property="statusLabel" destination="Ivz-h2-zLR" id="oM1-V1-mv4"/>
                         <outlet property="threeButton" destination="EWB-ni-gMh" id="JPr-dk-jPc"/>
                         <outlet property="twoButton" destination="aF5-eL-VF7" id="Pqe-IM-QTv"/>
                         <segue destination="AnD-FI-gp5" kind="push" identifier="TemperatureAndCheckManagerIdentifier" id="3ey-r3-fef"/>
@@ -637,16 +638,9 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main2_ling.png" id="ZPv-65-e2d">
-                                <rect key="frame" x="249" y="275" width="25" height="26"/>
+                                <rect key="frame" x="249" y="275" width="25" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5US-TP-CFO">
-                                <rect key="frame" x="173" y="178" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <state key="normal" backgroundImage="fu_alarm.png">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main2_head.png" id="zJY-eS-prV">
                                 <rect key="frame" x="106" y="364" width="97" height="97"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
@@ -667,6 +661,9 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <state key="normal" title="开始测温" backgroundImage="main2_zhengzhuang.png">
                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="actionButtonTouch:" destination="U0S-nX-ImH" eventType="touchUpInside" id="T96-sU-a9t"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="CE8-fl-qrv">
                                 <rect key="frame" x="298" y="348" width="22" height="31"/>
@@ -678,10 +675,29 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                     <action selector="rightButtonTouch:" destination="U0S-nX-ImH" eventType="touchUpInside" id="P0s-3L-5gT"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" id="UTw-eF-GK3">
+                                <rect key="frame" x="12" y="167" width="198" height="196"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5US-TP-CFO">
+                                        <rect key="frame" x="168" y="20" width="30" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" backgroundImage="fu_alarm.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="XXF-yF-HPR"/>
+                    <connections>
+                        <outlet property="actionButton" destination="t6d-Do-oKi" id="KDD-uo-bT3"/>
+                        <outlet property="panelView" destination="UTw-eF-GK3" id="eDz-wc-u5O"/>
+                        <outlet property="tempLabel" destination="Pup-0c-3cQ" id="sav-gF-epC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xjl-PP-CsY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
